# steaam-price

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  analyze_prices.py  create_mock_data.py  main.py  main_test.py  pyproject.toml
.github/workflows/: python-app.yml
js_backup/: README.md  fetchApps.js  fetchPrices.js  index.js  package-lock.json  package.json
steam_price/: __init__.py  apps.py  dataframe.py  exchange_rates.py  logger.py  multi_region.py  prices.py
